Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95186

snapCamera fails to show frames

XMLWordPrintable

    • macOS

      With almost all meetings now happening online, many folks have SnapCamera to make their backgrounds or faces more fun. (SnapCamera creates a virtual camera that lets you do fun / interesting things to your video feed in realtime)

      Launching the "camera" sample project when SnapCamera is the default camera will just show nothing at all, no image.

        For Gerrit Dashboard: QTBUG-95186
        # Subject Branch Project Status CR V

            artemiy Artem Dyomin
            davecotter David M. Cotter
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes