Skip broken cameras on macOS

We can't handle a camera that doesn't provide us any valid vode formats,
so skip those and don't enumerate them.

One such example is the Snap Camera, that doesn't provide a valid
encoding for the video data they are supposed to deliver
(CMVideoFormatDescriptionGetCodecType() returns 0x18 which is not
any valid FourCC code).

Task-number: QTBUG-95186
Change-Id: I19f8500f3ed48ccb689436af10b59ec12c6d26fa
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 8a7e5ac48156ef2d872f3f27e3cf72379dd7ab0a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>